<resources>
    <string name="app_name">WrComic</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_Home">Home</string>
    <string name="nav_see_all_comics">All Comics</string>
    <string name="nav_about_us">About Us</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="see_all_comics">See all Comics</string>
    <string name="wrcomic_gmail_com">wrcomic@gmail.com</string>
    <string name="alamat">Jl. Raya Kb. Jeruk No.27, RT.2/RW.9, Kb. Jeruk, Kec. Kb. Jeruk, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11530</string>
    <string name="user">username</string>
    <string name="sinopsis">Sinopsis :</string>
    <string name="publisher">Publisher :</string>
    <string name="language">Language :</string>
    <string name="pages">Pages :</string>
    <string name="author">Author :</string>
    <string name="title">Title :</string>
    <string name="english">English</string>
    <string name="sinopsis_naruto">In order to face off against Madara and his newly acquired Six Paths power, Guy pulls out his most dangerous move. Guy has put his very life on the line, but is it enough against Madara? Meanwhile, as Naruto fights on the edge of death, he meets a special figure who may change the entire direction of the battle!</string>
    <string name="sinopsis_onepiece">With the raid on Onigashima in sight, Kanjuro’s betrayal is revealed. He’s kidnapped Momonosuke! While the samurai are in shock, Luffy, Law and Kid work together to bring a ray of hope. It’s time to take on Kaido and save Wano!!</string>
    <string name="shueisha">Shueisha</string>
    <string name="sinopsis_bleach">With Kyoraku gravely injured, it\'ll be up to his adjutant Nanao to protect him. But can she master her newly revealed sword in time to make a difference? Meanwhile, Uryu\'s plans will become clear when he comes face-to-face with Ichigo!</string>
    <string name="kodansha">Kodansha</string>
    <string name="sinopsisAOT">Once hailed as humanity’s greatest hope, Eren has since become unrecognizable. With the Attack Titan now morphed into a grotesque, colossal skeleton of its former self, Eren continues to control the wave of Titans laying waste to the world, extinguishing countless homes, towns, and lives in their wake. In order to salvage what’s left of humanity, Mikasa, Armin, and the Survey Corps decide to confront Eren head-on. But to stop the Rumbling, they’ll have to dedicate much more than their hearts...</string>
    <string name="sinopsisOnepunchman">Immediately before the big Monster Association battle, the Class-S heroes hold a strategy meeting. Unfortunately, they just aren’t in sync, and when Amai Mask barges in, the situation only gets worse. Thankfully, King appears just in time to boost their morale—and it’s a good thing, too, because the big monster battle begins!</string>
    <string name="about_txt">WR Comic is mobile apps that provide best comic and service everyday</string>
    <string name="desc">WR Comic is mobile apps that provide best comic and service everyday</string>


</resources>