<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wrcomic.ui.home.HomeFragment"
        android:label="@string/nav_Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.wrcomic.ui.gallery.GalleryFragment"
        android:label="@string/nav_see_all_comics"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.wrcomic.ui.aboutus.AboutUsFragment"
        android:label="@string/nav_about_us"
        tools:layout="@layout/fragment_aboutus" />
</navigation>